# EKF-VINDy

./: .gitignore  LICENSE  README.md  diffusion.py  diffusion_animation.py  duffing_conserved.ipynb  duffing_energy_loss.ipynb  duffing_energy_loss_long_horizon.ipynb  generate_rd_spiral_script.py  generate_rd_spiral_temp.py  henon_heiles.ipynb  mode_selection.ipynb  pyproject.toml  reaction_diffusion_POD.ipynb  requirements.txt  roessler.ipynb  roessler_example.py  roessler_utils.py  selkov_play.py  spiral_diffusion.py  spiral_diffusion_beta.py  spiral_diffusion_fourier.py  svd_rd.py  vindy_play.py
aesindy/: __init__.py  autoencoder.py  utils.py
aesindy/vindy/: losses.py  sindy_layer.py  training_loops.py
aesindy/vindy/distributions/: base_distribution.py  gaussian.py  laplace.py
autoencoder_sindy/: ae_utils.py  autoencoder  autoencoder.py  sindy_layer.py  test.py
data_generation/rd_spiral/: generate_rd_spiral.py  generate_transient_rd_spiral.py  reaction_diffusion_POD.ipynb  show_animation_spiral.py  show_animation_transient.py  side_by_side_spirals.py
diffusion_experiments/: gray_scott.py
diffusion_experiments/simulation_scripts_wip/: faster_diffusion.py  sanity_check.py  selkov_play.py  spiral_diffusion.py  stable_spiral.txt
diffusion_experiments/temp/: roessler_example.ipynb
ekf/: ekf_callbacks.py  jacobian_utils.py
ekf/error_metrics/: abs_error.py
ekf/filters/: callbacks.py  ekf.py  error_computation.py
ekf/plotting/: __init__.py  plotter.py
ekf/zoo/: __init__.py
ekf_vindy/: jacobian_utils.py  utils.py
ekf_vindy/ekf/: jacobian_utils.py  utils.py
ekf_vindy/ekf/filters/: callbacks.py  config.py  constraints.py  ekf.py  error_computation.py
ekf_vindy/filters/: constraints.py  ekf.py  state.py
ekf_vindy/filters/constraints/: constraints.py
ekf_vindy/playground/: pysindy_play.py  selkov_play.py
ekf_vindy/plotting/: plotter.py
ekf_vindy/vindy/: torch_config.py  training_loops.py  utils.py
ekf_vindy/vindy/distributions/: base_distribution.py  gaussian.py  laplace.py
ekf_vindy/vindy/layers/: sindy_layer.py  vindy_layer.py
ekf_vindy/vindy/wip/: autoencoder.py  sindy_layer.py  training_loop_sindy.py
filters/: filter.py  state.py
notebooks/: asdsa.py  duffing_oscillator.ipynb  harmonic_ind_updates.ipynb  harmonic_oscillator.ipynb  henon_heiles.ipynb  mass_conservation.ipynb  notes.ipynb  roessler_vindy_ekf.ipynb  selkov_vindy_ekf.ipynb
notebooks/duffing/: duffing_conserved.ipynb  duffing_energy_loss.ipynb  duffing_energy_loss_long_horizon.ipynb
notebooks/reaction_diffusion/: error_animation_questionmark.py  rd_comparison_script.py  rd_ekf_error_analysis.ipynb  rd_ekf_pod.ipynb  rd_kalman.ipynb
notebooks/roessler/: ekf_vindy_roessler.ipynb  roessler_vindy.ipynb
notebooks/selkov/: selkov_sanity_check.py  selkov_sindy_gradient.ipynb
notebooks/sketches/: harmonic_energy_loss.ipynb  harmonic_ind_updates.ipynb  lorenz.ipynb
playground/: pysindy_play.py
results/roessler/vindy/weights/vindy_nbd__me_True_0.1_seed_29_noise_0.01/: .weights.h5
temp/results/roessler/vindy/weights/vindy_nbd__me_True_0.1_seed_29_noise_0.01/: .weights.h5
venv311/: pyvenv.cfg
