[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vindy"
version = "0.1.8"
authors = [
  { name="Jonas Kneifl", email="jonas.kneifl@itm.uni-stuttgart.com" },
  { name="Paolo Conti", email="paolo.conti@polimi.it" },
]
description = "AESINDy is a Python package for automated system identification of low-dimensional systems combining autoencoders and SINDy."
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "matplotlib>=3.10",
    "numpy>=1.26",
    "scikit_learn>=1.2",
    "scipy>=1.10",
    "sympy>=1.12",
#    "pysindy>=1.7",
    "tensorflow>=2.18",
    "tensorflow_model_optimization>=0.8",
    "tf-keras>=2.18",
    "tensorflow-probability (>=0.25.0,<0.26.0)",
    "pysindy (>=1.7,<2.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "rd-spiral @ git+https://github.com/sandyherho/rd_spiral.git",
    "numba (>=0.62.1,<0.63.0)",
]
keywords = [
    "model order reduction",
    "system identification",
    "surrogate modeling",
    "reduced order models",
    "variational",
    "uncertainty quantification",
    "generative modeling",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
gui = [
    "visualizer-3d",
    "imageio",
]
interfaces = [
]

[tool.setuptools]
# If there are data files included in your packages that need to be
# installed, specify them here.
#package-data = {"sample" = ["*.dat"]}

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

[project.urls]
Homepage = "https://github.com/jkneifl/VENI-VINDy-VICI"
Issues = "https://github.com/jkneifl/VENI-VINDy-VICI/issues"
