[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ekfvindy"
version = "0.1.8"
authors = [
  { name="Carlos Santillán", email="carlosalberto.santillan@polimi.it"},
]
description = "EKF-VINDy is a package for data assimilation in high-dimensional dynamical systems identified with SINDy."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "matplotlib>=3.10",
    "numpy>=1.26",
    "scikit_learn>=1.2",
    "scipy>=1.10",
    "sympy>=1.12",
#    "pysindy>=1.7",
    "pysindy (>=1.7,<2.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "numba (>=0.62.1,<0.63.0)",
    "torch (>=2.9.0,<3.0.0)",
]
keywords = [
    "model order reduction",
    "system identification",
    "surrogate modeling",
    "reduced order models",
    "variational",
    "uncertainty quantification",
    "generative modeling",
    "data assimilation",
    "kalman filtering",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
gui = [
    "visualizer-3d",
    "imageio",
]
interfaces = [
]

[tool.setuptools]
# If there are data files included in your packages that need to be
# installed, specify them here.
#package-data = {"sample" = ["*.dat"]}

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

[project.urls]
